--- a/src/main/resources/shops/rotational_example.yml
+++ b/src/main/resources/shops/rotational_example.yml
@@ -1,213 +1,61 @@
-# Building Blocks Shop
-title: "Blocks"
+# Rotational Shop Example
+# Demonstrates: rotational shop with unique interval, slot config, and items
+
+title: "Event Rotational Shop"
+type: rotational
 size: 4
+rotation-interval: 6h
+slots: 4
+item-slots: [11, 13, 15, 29]
+announce-rotation: true
+rotation-message: "<aqua>The %shop% event shop has rotated! New event items are available!"
 
 pagination:
   next_page:
     material: LIME_STAINED_GLASS_PANE
-    display-name: "<#66ff2e><bold>ɴᴇxᴛ ᴘᴀɢᴇ →</bold>"
+    display-name: "<green><bold>Next Page →</bold>"
     slot: 35
   previous_page:
     material: RED_STAINED_GLASS_PANE
-    display-name: "<#e42121><bold>← ᴘʀᴇᴠɪᴏᴜs ᴘᴀɢᴇ</bold>"
+    display-name: "<red><bold>← Previous Page</bold>"
     slot: 27
   back_to_menu:
     material: BARRIER
-    display-name: "<#e42121><bold>ʙᴀᴄᴋ ᴛᴏ ᴍᴀɪɴ ᴍᴇɴᴜ</bold>"
-    lore: ["<#BDBDBD><i>Return to shop categories.</i>"]
+    display-name: "<red><bold>Back to Main Menu</bold>"
+    lore:
+      - "<gray><i>Return to shop categories.</i>"
     slot: 31
     action: "back_to_main_menu"
   filler:
-    material: BLACK_STAINED_GLASS_PANE
+    material: GRAY_STAINED_GLASS_PANE
     display-name: " "
-    lore: []
+
+featured-items:
+  - id: event_token
+    material: NETHER_STAR
+    display-name: "<light_purple>Event Token"
+    lore:
+      - "<gray>Spend these on event rewards!"
+    buy-price: 1000
+    sell-price: 500
+    buy-limit: 5
+    slot: 13
+featured-slots: [13]
 
 items:
-  # --- Row 1 ---
-  - id: grass_block
-    material: GRASS_BLOCK
-    display-name: "<bold><#558B2F>Grass Block</#558B2F></bold>"
-    slot: 10
-    page: 0
+  - id: event_crate
+    material: CHEST
+    display-name: "<yellow>Event Crate"
     lore:
-      - "<#BDBDBD>Buy Price: <#66ff2e>%buy_price%"
-      - "<#BDBDBD>Sell Price: <#e42121>%sell_price%"
-      - ""
-      - "<#66ff2e>✔ Left-Click to Buy"
-      - "<#e42121>✔ Right-Click to Sell"
-    buy-price: 2.50
-    sell-price: 1.25
-    currency-command: "eco take %player% %amount%"
-  - id: dirt
-    material: DIRT
-    display-name: "<bold><#8D6E63>Dirt</#8D6E63></bold>"
-    slot: 11
-    page: 0
+      - "<gray>Contains random event loot!"
+    buy-price: 5000
+    sell-price: 0
+    buy-limit: 1
+  - id: firework_rocket
+    material: FIREWORK_ROCKET
+    display-name: "<red>Firework Rocket"
     lore:
-      - "<#BDBDBD>Buy Price: <#66ff2e>%buy_price%"
-      - "<#BDBDBD>Sell Price: <#e42121>%sell_price%"
-      - ""
-      - "<#66ff2e>✔ Left-Click to Buy"
-      - "<#e42121>✔ Right-Click to Sell"
-    buy-price: 1.00
-    sell-price: 0.50
-  - id: gravel
-    material: GRAVEL
-    display-name: "<bold><#A3A3A3>Gravel</#A3A3A3></bold>"
-    slot: 12
-    page: 0
-    lore:
-      - "<#BDBDBD>Buy Price: <#66ff2e>%buy_price%"
-      - "<#BDBDBD>Sell Price: <#e42121>%sell_price%"
-      - ""
-      - "<#66ff2e>✔ Left-Click to Buy"
-      - "<#e42121>✔ Right-Click to Sell"
-    buy-price: 1.20
-    sell-price: 0.60
-  - id: sand
-    material: SAND
-    display-name: "<bold><#F5E0C3>Sand</#F5E0C3></bold>"
-    slot: 13
-    page: 0
-    lore:
-      - "<#BDBDBD>Buy Price: <#66ff2e>%buy_price%"
-      - "<#BDBDBD>Sell Price: <#e42121>%sell_price%"
-      - ""
-      - "<#66ff2e>✔ Left-Click to Buy"
-      - "<#e42121>✔ Right-Click to Sell"
-    buy-price: 1.50
-    sell-price: 0.75
-  - id: red_sand
-    material: RED_SAND
-    display-name: "<bold><#D87F33>Red Sand</#D87F33></bold>"
-    slot: 14
-    page: 0
-    lore:
-      - "<#BDBDBD>Buy Price: <#66ff2e>%buy_price%"
-      - "<#BDBDBD>Sell Price: <#e42121>%sell_price%"
-      - ""
-      - "<#66ff2e>✔ Left-Click to Buy"
-      - "<#e42121>✔ Right-Click to Sell"
-    buy-price: 1.75
-    sell-price: 0.85
-  - id: stone
-    material: STONE
-    display-name: "<bold><#BDBDBD>Stone</#BDBDBD></bold>"
-    slot: 15
-    page: 0
-    lore:
-      - "<#BDBDBD>Buy Price: <#66ff2e>%buy_price%"
-      - "<#BDBDBD>Sell Price: <#e42121>%sell_price%"
-      - ""
-      - "<#66ff2e>✔ Left-Click to Buy"
-      - "<#e42121>✔ Right-Click to Sell"
-    buy-price: 1.25
-    sell-price: 0.60
-  - id: cobblestone
-    material: COBBLESTONE
-    display-name: "<bold><#757575>Cobblestone</#757575></bold>"
-    slot: 16
-    page: 0
-    lore:
-      - "<#BDBDBD>Buy Price: <#66ff2e>%buy_price%"
-      - "<#BDBDBD>Sell Price: <#e42121>%sell_price%"
-      - ""
-      - "<#66ff2e>✔ Left-Click to Buy"
-      - "<#e42121>✔ Right-Click to Sell"
-    buy-price: 0.80
-    sell-price: 0.40
-  # --- Row 2 ---
-  - id: granite
-    material: GRANITE
-    display-name: "<bold><#9A6C5B>Granite</#9A6C5B></bold>"
-    slot: 19
-    page: 0
-    lore:
-      - "<#BDBDBD>Buy Price: <#66ff2e>%buy_price%"
-      - "<#BDBDBD>Sell Price: <#e42121>%sell_price%"
-      - ""
-      - "<#66ff2e>✔ Left-Click to Buy"
-      - "<#e42121>✔ Right-Click to Sell"
-    buy-price: 1.50
-    sell-price: 0.75
-  - id: diorite
-    material: DIORITE
-    display-name: "<bold><#E8E8E8>Diorite</#E8E8E8></bold>"
-    slot: 20
-    page: 0
-    lore:
-      - "<#BDBDBD>Buy Price: <#66ff2e>%buy_price%"
-      - "<#BDBDBD>Sell Price: <#e42121>%sell_price%"
-      - ""
-      - "<#66ff2e>✔ Left-Click to Buy"
-      - "<#e42121>✔ Right-Click to Sell"
-    buy-price: 1.50
-    sell-price: 0.75
-  - id: andesite
-    material: ANDESITE
-    display-name: "<bold><#8F8F8F>Andesite</#8F8F8F></bold>"
-    slot: 21
-    page: 0
-    lore:
-      - "<#BDBDBD>Buy Price: <#66ff2e>%buy_price%"
-      - "<#BDBDBD>Sell Price: <#e42121>%sell_price%"
-      - ""
-      - "<#66ff2e>✔ Left-Click to Buy"
-      - "<#e42121>✔ Right-Click to Sell"
-    buy-price: 1.50
-    sell-price: 0.75
-  - id: oak_log
-    material: OAK_LOG
-    display-name: "<bold><#A1887F>Oak Log</#A1887F></bold>"
-    slot: 22
-    page: 0
-    lore:
-      - "<#BDBDBD>Buy Price: <#66ff2e>%buy_price%"
-      - "<#BDBDBD>Sell Price: <#e42121>%sell_price%"
-      - ""
-      - "<#66ff2e>✔ Left-Click to Buy"
-      - "<#e42121>✔ Right-Click to Sell"
-    buy-price: 3.00
-    sell-price: 1.50
-  - id: spruce_log
-    material: SPRUCE_LOG
-    display-name: "<bold><#6D4C41>Spruce Log</#6D4C41></bold>"
-    slot: 23
-    page: 0
-    lore:
-      - "<#BDBDBD>Buy Price: <#66ff2e>%buy_price%"
-      - "<#BDBDBD>Sell Price: <#e42121>%sell_price%"
-      - ""
-      - "<#66ff2e>✔ Left-Click to Buy"
-      - "<#e42121>✔ Right-Click to Sell"
-    buy-price: 3.00
-    sell-price: 1.50
-  - id: birch_log
-    material: BIRCH_LOG
-    display-name: "<bold><#E0E0E0>Birch Log</#E0E0E0></bold>"
-    slot: 24
-    page: 0
-    lore:
-      - "<#BDBDBD>Buy Price: <#66ff2e>%buy_price%"
-      - "<#BDBDBD>Sell Price: <#e42121>%sell_price%"
-      - ""
-      - "<#66ff2e>✔ Left-Click to Buy"
-      - "<#e42121>✔ Right-Click to Sell"
-    buy-price: 3.00
-    sell-price: 1.50
-  - id: dark_oak_log
-    material: DARK_OAK_LOG
-    display-name: "<bold><#4E342E>Dark Oak Log</#4E342E></bold>"
-    slot: 25
-    page: 0
-    lore:
-      - "<#BDBDBD>Buy Price: <#66ff2e>%buy_price%"
-      - "<#BDBDBD>Sell Price: <#e42121>%sell_price%"
-      - ""
-      - "<#66ff2e>✔ Left-Click to Buy"
-      - "<#e42121>✔ Right-Click to Sell"
-    buy-price: 3.50
-    sell-price: 1.75
-
-announce-rotation: true
-rotation-message: "<gold>The %shop% shop has rotated! Check out the new items!"
+      - "<gray>Celebrate the event!"
+    buy-price: 50
+    sell-price: 10
+    buy-limit: 16
