--- a/src/main/resources/shops/command_based.yml
+++ b/src/main/resources/shops/command_based.yml
@@ -31,6 +31,8 @@ items:
     slot: 10
     page: 0
     lore:
+      - "<gray>Buy Price: <gold>$%buy_price%"
+      - "<gray>Sell Price: <green>$%sell_price%"
       - "<gray>Grants VIP rank on purchase."
     buy-price: 10000
     sell-price: -1
@@ -42,6 +44,8 @@ items:
     slot: 11
     page: 0
     lore:
+      - "<gray>Buy Price: <gold>$%buy_price%"
+      - "<gray>Sell Price: <green>$%sell_price%"
       - "<gray>Grants /fly for 1 hour."
     buy-price: 2500
     sell-price: -1
@@ -53,6 +57,8 @@ items:
     slot: 12
     page: 0
     lore:
+      - "<gray>Buy Price: <gold>$%buy_price%"
+      - "<gray>Sell Price: <green>$%sell_price%"
       - "<gray>Heals you instantly on purchase."
     buy-price: 500
     sell-price: -1
